deployment-examples/kubernetes/Storage.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nfs-server
spec:
  clusterIP: 10.0.10.240
  ports:
  - name: udp-nfs
    port: 2049
    protocol: UDP
  - name: udp-rpcbind
    port: 111
    protocol: UDP
  - name: udp-statdp
    port: 32765
    protocol: UDP
  - name: udp-statdo
    port: 32766
    protocol: UDP
  - name: udp-mountd
    port: 32767
    protocol: UDP
  - name: udp-nlockmgr
    port: 32768
    protocol: UDP
  - name: tcp-nfs
    port: 2049
    protocol: TCP
  - name: tcp-rpcbind
    port: 111
    protocol: TCP
  - name: tcp-statdp
    port: 32765
    protocol: TCP
  - name: tcp-statdo
    port: 32766
    protocol: TCP
  - name: tcp-mountd
    port: 32767
    protocol: TCP
  - name: tcp-nlockmgr
    port: 32768
    protocol: TCP
  selector:
    role: nfs-server
