deployment-examples/kubernetes/GoogleCloud.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nfs-server
spec:
  replicas: 1
  selector:
    matchLabels:
      role: nfs-server
  template:
    metadata:
      labels:
        role: nfs-server
    spec:
      containers:
      - name: nfs-server
        image: openwisp/openwisp-nfs:latest
        securityContext:
          privileged: true
        volumeMounts:
          - mountPath: /exports/
            name: persistent-disk
      volumes:
        - name: persistent-disk
          gcePersistentDisk:
            pdName: openwisp-disk
            fsType: ext4
---
apiVersion: v1
kind: Service
metadata:
  name: openwisp-nginx
  labels:
    app: openwisp-nginx
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
  selector:
   app: openwisp-nginx
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: openwisp-http-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: openwisp-http-loadbalancer-ip
  labels:
    app: openwisp-nginx
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: openwisp-nginx
          servicePort: 80
